--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,18 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* TODO Use Tailwind */
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: black;
+  font-family: sans-serif;
+  color: #354358;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(to right bottom, #00f260, #0575e6);
 }
-
-* {
-  box-sizing: border-box;
+::-webkit-scrollbar {
+  width: 8px;
+  height: 0px;
 }
